update versions: jetty from 9 to 12, wicket from 7 to 10, spring from 5 to 6