@@ -1,13 +1,17 @@
 package com.payneteasy.superfly.client;
 
 import com.payneteasy.superfly.api.SSOService;
+import com.payneteasy.superfly.api.request.TouchSessionsRequest;
 import org.easymock.EasyMock;
 import org.easymock.IAnswer;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 /**
  * @author rpuch
@@ -26,7 +30,7 @@ public class SessionToucherImplTest {
         toucher.setSsoService(ssoService);
         toucher.startup();
 
-        ssoService.touchSessions(Arrays.asList(10L));
+        ssoService.touchSessions(TouchSessionsRequest.builder().sessionIds(List.of(10L)).build());
         EasyMock.expectLastCall();
         EasyMock.replay(ssoService);
         toucher.addSessionId(10L);
@@ -52,14 +56,15 @@ public class SessionToucherImplTest {
 
         // nothing should be sent
         final Set<Boolean> sent = new HashSet<Boolean>();
-        ssoService.touchSessions(EasyMock.anyObject(List.class));
+        ssoService.touchSessions(TouchSessionsRequest.builder().sessionIds(EasyMock.anyObject(List.class)).build());
         EasyMock.expectLastCall().andAnswer(new IAnswer<Object>() {
             @Override
             public Object answer() throws Throwable {
                 sent.add(true);
                 return null;
             }
-        }).anyTimes();
+        }).anyTimes()
+        ;
         EasyMock.replay(ssoService);
         toucher.addSessionId(10L);
         Thread.sleep(1500); // timeout, so touch arrives
@@ -73,17 +78,19 @@ public class SessionToucherImplTest {
     @Test
     @SuppressWarnings("unchecked")
     public void testMultithreaded() throws InterruptedException {
-        final Set<Long> touchedSessionIds = Collections.synchronizedSet(new HashSet<Long>());
+        final Set<Long> touchedSessionIds = Collections.synchronizedSet(new HashSet<>());
 
-        ssoService.touchSessions(EasyMock.anyObject(List.class));
-        EasyMock.expectLastCall().andAnswer(new IAnswer<Object>() {
-            @Override
-            public Object answer() throws Throwable {
-                List<Long> ids = (List<Long>) EasyMock.getCurrentArguments()[0];
-                touchedSessionIds.addAll(ids);
-                return null;
-            }
-        }).anyTimes();
+        ssoService.touchSessions(TouchSessionsRequest.builder().sessionIds(EasyMock.anyObject(List.class)).build());
+
+        EasyMock.expectLastCall()
+                .andAnswer(() -> {
+                    TouchSessionsRequest currentArgument = (TouchSessionsRequest) EasyMock.getCurrentArguments()[0];
+                    List<Long>           ids             = currentArgument.getSessionIds();
+                    touchedSessionIds.addAll(ids);
+                    return null;
+                })
+                .anyTimes()
+        ;
         EasyMock.replay(ssoService);
 
         final SessionToucherImpl toucher = new SessionToucherImpl(1); // 1 second between flushes
@@ -93,12 +100,9 @@ public class SessionToucherImplTest {
         Thread[] threads = new Thread[10];
         for (int i = 0; i < threads.length; i++) {
             final long ii = i;
-            threads[i] = new Thread(new Runnable() {
-                @Override
-                public void run() {
-                    for (int j = 0; j < 10000; j++) {
-                        toucher.addSessionId(ii);
-                    }
+            threads[i] = new Thread(() -> {
+                for (int j = 0; j < 10000; j++) {
+                    toucher.addSessionId(ii);
                 }
             });
             threads[i].start();
@@ -108,7 +112,7 @@ public class SessionToucherImplTest {
         for (Thread thread : threads) {
             thread.join();
         }
-        Thread.sleep(1500); // timeout, so touch arrives
+        Thread.sleep(3000); // timeout, so touch arrives
         toucher.shutdown();
         EasyMock.verify(ssoService);
 
